# multi-bot

./: .gitignore  README.md  package-lock.json  package.json
client/: index.html  package.json
client/src/: App.tsx  styles.css
orchestrator/: pyproject.toml
orchestrator/src/linkedin/: __init__.py
orchestrator/src/linkedin/multibot/: __init__.py  __main__.py  message_router.py  orchestrator.py  protocol.py
orchestrator/src/multibot/: __init__.py  __main__.py  message_router.py  models.py  orchestrator.py
orchestrator/tests/: test_message_router.py  test_orchestrator.py
scripts/: multi-bot-ssh-agent.service  multi-bot.service  write-status.sh
server/: package.json
server/src/: bridge.ts  database.ts  index.ts  protocol.ts
server/test/: protocol.test.ts
